--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,14 @@
 {
-  "extends": "@vue/tsconfig/tsconfig.web.json",
-  "include": [
-    "dts/*",
-     "src/**/*", 
-     "src/**/*.vue"
-    ],
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    },
-    "types": ["element-plus/global"] // config for volar support
-  },
-
+  "files": [],
   "references": [
     {
       "path": "./tsconfig.config.json"
+    },
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.cypress-ct.json"
     }
   ]
 }
